Same spelling on demo-page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="unit span-3">
         <h2>Hello, my name is Ingrid</h2>
         <p>
-          Ingrid is a lightweight and fluid CSS layout system, who's main goal is to reduce the use of classes on individual units. 
+          Ingrid is a lightweight and fluid CSS layout system, whose main goal is to reduce the use of classes on individual units. 
           Making it feel a bit less obtrusive and bit more fun to reflow for responsive layouts.
         </p>
         <p>
