Content fixes on demo-page

--- a/index.html
+++ b/index.html
@@ -69,25 +69,25 @@
     <div class="ingrid in-fourths">
       <div class="unit">
         <div class="box">
-          <h2>unit one</h2>
+          <h2>unit</h2>
           <p>A document is a work of non-fiction writing intended to store and communicate information, thus acting as a recording. And some more text just for the sake of it.</p>
         </div>
       </div>
       <div class="unit">
         <div class="box">
-          <h2>unit two</h2>
+          <h2>unit</h2>
           <p>A document is a work of non-fiction writing intended to store and communicate information, thus acting as a recording.</p>
         </div>
       </div>
       <div class="unit">
         <div class="box">
-          <h2>unit three</h2>
+          <h2>unit</h2>
           <p>A document is a work of non-fiction writing intended to store and communicate information, thus acting as a recording.</p>
         </div>
       </div>
       <div class="unit">
         <div class="box">
-          <h2>unit four</h2>
+          <h2>unit</h2>
           <p>A document is a work of non-fiction writing intended to store and communicate information, thus acting as a recording.</p>
         </div>
       </div>
@@ -98,14 +98,14 @@
         <figure>
           <img src="http://placekitten.com/g/490/200" alt="a kitten" />
         </figure>
-        <h2>unit one</h2>
+        <h2>unit</h2>
         <p>A document is a work of non-fiction writing intended to store and communicate information, thus acting as a recording.</p>
       </div>
       <div class="unit">
         <figure>
           <img src="http://placekitten.com/g/490/200" alt="a kitten" />
         </figure>
-        <h2>unit two</h2>
+        <h2>unit</h2>
         <p>A document is a work of non-fiction writing intended to store and communicate information, thus acting as a recording.</p>
       </div>
     </div>
@@ -115,21 +115,21 @@
         <figure>
           <img src="http://placekitten.com/g/450/190" alt="a kitten" />
         </figure>
-        <h2>unit one</h2>
+        <h2>unit</h2>
         <p>A document is a work of non-fiction writing intended to store and communicate information, thus acting as a recording.</p>
       </li>
       <li class="unit">
         <figure>
           <img src="http://placekitten.com/g/450/190" alt="a kitten" />
         </figure>
-        <h2>unit two</h2>
+        <h2>unit</h2>
         <p>A document is a work of non-fiction writing intended to store and communicate information, thus acting as a recording.</p>
       </li>
       <li class="unit">
         <figure>
           <img src="http://placekitten.com/g/450/190" alt="a kitten" />
         </figure>
-        <h2>unit three</h2>
+        <h2>unit</h2>
         <p>A document is a work of non-fiction writing intended to store and communicate information, thus acting as a recording.</p>
       </li>
     </ul>
@@ -141,25 +141,25 @@
       <div class="unit span-two">
         <div class="ingrid in-halves">
           <div class="unit">
-            <h2>unit one</h2>
+            <h2>unit</h2>
             <p>A document is a work of non-fiction writing intended to store and communicate information, thus acting as a recording.</p>
           </div>
           <div class="unit">
-            <h2>unit two</h2>
+            <h2>unit</h2>
             <p>A document is a work of non-fiction writing intended to store and communicate information, thus acting as a recording.</p>
           </div>
         </div>
         <div class="ingrid in-thirds">
           <div class="unit">
-            <h2>field-unit one</h2>
+            <h2>unit</h2>
             <p>A document is a work of non-fiction writing intended to store and communicate information, thus acting as a recording.</p>
           </div>
           <div class="unit">
-            <h2>field-unit one</h2>
+            <h2>unit</h2>
             <p>A document is a work of non-fiction writing intended to store and communicate information, thus acting as a recording.</p>
           </div>
           <div class="unit">
-            <h2>field-unit one</h2>
+            <h2>unit</h2>
             <p>A document is a work of non-fiction writing intended to store and communicate information, thus acting as a recording.</p>
           </div>
         </div>
