--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       </div>
       <div class="unit">
         <figure>
-          <img class="frame" src="img/bear.jpg" alt="a kitten" />
+          <img src="http://placekitten.com/g/430/560" alt="a kitten">
         </figure>
       </div>
     </div>
