--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Demo styles -->
   <link rel="stylesheet" href="css/demo-styles.css" />
   
-  <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1">
+  <meta name="viewport" content="width=device-width">
   
   <!--[if lt IE 9]>
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
