Edash as html entity on demo-page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 
   <meta charset="UTF-8">
-  <title>Ingrid — a fluid CSS layout system</title>
+  <title>Ingrid &ndash; a fluid CSS layout system</title>
   
   <!-- Ingrid -->
   <link rel="stylesheet" href="css/ingrid.css" />
