More betterness on Ingrid SCSS

--- a/ingrid-scss/demo.html
+++ b/ingrid-scss/demo.html
@@ -46,6 +46,25 @@
         <li class="demo-minis--unit"><div class="demo-box"></div></li>
       </ul>
 
+      <ul class="demo-parent">
+        <li class="demo-parent--custom-unit">
+          <ul class="demo-nested">
+            <li class="demo-nested--unit"><div class="demo-box"></div></li>
+            <li class="demo-nested--unit"><div class="demo-box"></div></li>
+            <li class="demo-nested--unit"><div class="demo-box"></div></li>
+            <li class="demo-nested--unit"><div class="demo-box"></div></li>
+          </ul>
+        </li>
+        <li class="demo-parent--unit"><div class="demo-box"></div></li>
+      </ul>
+
+      <ul class="demo-responsive">
+        <li class="demo-responsive--unit"><div class="demo-box"></div></li>
+        <li class="demo-responsive--unit"><div class="demo-box"></div></li>
+        <li class="demo-responsive--unit"><div class="demo-box"></div></li>
+        <li class="demo-responsive--unit"><div class="demo-box"></div></li>
+      </ul>
+
     </div>
 
 </body>
